Fixed alignment of project details headings on portfolio page.

--- a/static/works.styl
+++ b/static/works.styl
@@ -64,13 +64,15 @@
     color text-medium-dark
     font italic normal 1em/1.5 Georgia,serif
     text-align right
+    vertical-align top
 
   & td
     padding 0
+    width 90%
 
     border 0
 
-    width 90%
+    vertical-align top
 
 .work-controls
   bottom 0
